--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -184,7 +184,7 @@ footer_menu__settings:
 # Social Links
 social:
 #- {icon: "fa-brands fa-facebook-f", name: "Facebook", link: "https://facebook.com"}
-- {icon: "fa-brands fa-x-twitter", name: "Twitter", link: "https://twitter.com"}
+- {icon: "fa-brands fa-x-twitter", name: "Twitter", link: "https://x.com/jeffrey_analyst"}
 #- {icon: "fa-brands fa-tiktok", name: "Tiktok", link: "https://www.tiktok.com"}
 #- {icon: "fa-brands fa-instagram", name: "Instagram", link: "https://instagram.com"}
 
